Added clear button update, better handling

--- a/Run Multiple Apps GUI/Run Multiple Apps GUI.csproj
+++ b/Run Multiple Apps GUI/Run Multiple Apps GUI.csproj
@@ -8,4 +8,8 @@
 	<UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoClosingMessageBox" Version="1.0.0.2" />
+  </ItemGroup>
+
 </Project>
